@@ -2,69 +2,69 @@ package org.example.service;
 
 import org.example.model.Label;
 import org.example.model.Post;
-import org.example.repository.LabelRepository;
+import org.example.model.PostStatus;
 import org.example.repository.PostRepository;
-import org.example.repository.impl.LabelRepositoryImpl;
 import org.example.repository.impl.PostRepositoryImpl;
 
+import java.sql.Date;
+import java.sql.Timestamp;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PostService {
 
-    private final PostRepository postRepository;
-    private final LabelRepository labelRepository;
+    private PostRepository postRepository;
 
     public PostService() {
         this.postRepository = new PostRepositoryImpl();
-        this.labelRepository = new LabelRepositoryImpl();
     }
 
     public List<Post> getAll() {
         return postRepository.getAll();
     }
 
-    public boolean create(String body) {
+    public Post create(String body) {
         String content = body.split("___")[0].trim();
-        List<Label> allLabels = labelRepository.getAll();
-        List<Integer> labelIds = Arrays.stream(body.split("___")[1]
-                        .replaceAll(" ", "")
-                        .split(","))
+        List<Label> labels = postRepository.getLabels();
+        List<Integer> labelIds = Arrays
+                .stream(body.split("___")[1].replaceAll(" ", "").split(","))
                 .map(Integer::valueOf)
-                .collect(Collectors.toList());
-        if (allLabels.stream().map(Label::getId).collect(Collectors.toList()).containsAll(labelIds)) {
-            List<Label> currentLabels = allLabels.stream().filter(it -> labelIds.contains(it.getId())).collect(Collectors.toList());
+                .toList();
+        if (new HashSet<>(labels.stream().map(Label::getId).toList()).containsAll(labelIds)) {
+            List<Label> currentLabels = labels.stream().filter(it -> labelIds.contains(it.getId())).toList();
             Post post = new Post();
             post.setContent(content);
+            post.setCreated(new Timestamp(System.currentTimeMillis()));
+            post.setUpdated(new Timestamp(System.currentTimeMillis()));
             post.setLabels(currentLabels);
-            postRepository.create(post);
-            return true;
-        } else {
-            return false;
+            post.setStatus(PostStatus.ACTIVE);
+            return postRepository.create(post);
         }
+        return null;
     }
 
-    public boolean update(String body) {
+    public Post update(String body) {
         List<Post> allPosts = postRepository.getAll();
         int id = Integer.parseInt(body.split("___")[0]);
-        if (allPosts.stream().map(Post::getId).collect(Collectors.toList()).contains(id)) {
-            List<Label> allLabels = labelRepository.getAll();
-            List<Integer> idsLabels = Arrays
-                    .stream(body.split("___")[2].trim().replaceAll(" ", "").split(","))
-                    .map(Integer::valueOf)
-                    .collect(Collectors.toList());
-            if (allLabels.stream().map(Label::getId).collect(Collectors.toList()).containsAll(idsLabels)) {
-                List<Label> currentLabels = allLabels.stream().filter(it -> idsLabels.contains(it.getId())).collect(Collectors.toList());
-                String content = body.split("___")[1].trim();
-                Post post = allPosts.stream().filter(it -> it.getId().equals(id)).findFirst().orElse(null);
+        String content = body.split("___")[1].trim();
+        List<Label> allLabels = postRepository.getLabels();
+        List<Integer> idsLabels = Arrays
+                .stream(body.split("___")[2].trim().replaceAll(" ", "").split(","))
+                .map(Integer::valueOf)
+                .toList();
+        if (new HashSet<>(allLabels.stream().map(Label::getId).toList()).containsAll(idsLabels)) {
+            List<Label> currentLabels = allLabels.stream().filter(it -> idsLabels.contains(it.getId())).toList();
+            Post post = allPosts.stream().filter(it -> it.getId().equals(id)).findFirst().orElse(null);
+            if (post != null) {
                 post.setContent(content);
                 post.setLabels(currentLabels);
+                post.setUpdated(new Timestamp(System.currentTimeMillis()));
                 postRepository.update(post);
-                return true;
             }
+            return post;
         }
-        return false;
+        return null;
     }
 
     public void delete(Integer id) {
